--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -18,7 +18,8 @@
     }
   ],
   "notification_subscribers": [],
-  "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/core-docs",
+  "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.ja-jp",
+  "git_repository_branch_open_to_public_contributors": "Live",
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
   "dependent_repositories": [
