Include IntelliSense builds

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -54,6 +54,14 @@
       }
     }
   ],
+  
+
+"branch_target_mapping": {
+  "master": [
+      "Publish",
+      "Intellisense"
+    ]
+  },
   "need_generate_pdf_url_template": false,
   "Targets": {
     "Pdf": {
