--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -6,7 +6,7 @@
       "docset_name": "core-docs",
       "build_source_folder": ".",
       "build_output_subfolder": ".",
-      "locale": "ja-jp",
+      "locale": "de-de",
       "monikers": [
         "netframework-4.5.1",
         "netframework-4.5.2",
@@ -43,14 +43,14 @@
     }
   ],
   "notification_subscribers": [ ],
-  "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.ja-jp",
+  "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.de-de",
   "git_repository_branch_open_to_public_contributors": "live",
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft.ja-jp",
+      "url": "https://github.com/Microsoft/templates.docs.msft.de-de",
       "branch": "master"
     },
     {
@@ -87,6 +87,12 @@
       "version": "latest"
     }
   ],
+  "branch_target_mapping": {
+    "master": [
+      "Publish",
+      "Intellisense"
+    ]
+  },
   "need_generate_pdf_url_template": false,
   "Targets": {
     "Pdf": {
