--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -6,31 +6,56 @@
       "docset_name": "core-docs",
       "build_source_folder": ".",
       "build_output_subfolder": ".",
-      "locale": "ja-jp",
-      "version": 0,
+      "locale": "fr-fr",
+      "monikers": [
+        "netframework-4.5.1",
+        "netframework-4.5.2",
+        "netframework-4.5",
+        "netframework-4.6",
+        "netframework-4.6.1",
+        "netframework-4.6.2",
+        "netframework-4.7",
+        "netcore-1.0",
+        "netcore-1.1",
+        "netcore-2.0",
+        "netstandard-1.0",
+        "netstandard-1.1",
+        "netstandard-1.2",
+        "netstandard-1.3",
+        "netstandard-1.4",
+        "netstandard-1.5",
+        "netstandard-1.6",
+        "netstandard-2.0",
+        "xamarinios-10.8",
+        "xamarinandroid-7.1",
+        "xamarinmac-3.0"
+      ],
       "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "docs"
+      "build_entry_point": "docs",
+      "customized_template_paths": [
+        "_dependentPackages/memberpage.plugins/content"
+      ]
     }
   ],
-  "notification_subscribers": [],
-  "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.ja-jp",
+  "notification_subscribers": [ ],
+  "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.fr-fr",
   "git_repository_branch_open_to_public_contributors": "live",
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft.ja-jp",
+      "url": "https://github.com/Microsoft/templates.docs.msft.fr-fr",
       "branch": "master"
     },
     {
-      "path_to_root": "api_ref",
-      "url": "https://github.com/docascode/coreapi.git",
+      "path_to_root": "api",
+      "url": "https://github.com/MicrosoftDocs/dotnet-docs-yml4loc",
       "branch": "master"
     },
     {
@@ -47,13 +72,27 @@
       "path_to_root": "dotnet-xref",
       "url": "https://github.com/MicrosoftDocs/dotnet-xref",
       "branch": "live",
-      "branch_mapping":
-      {
+      "branch_mapping": {
         "master": "master",
         "live": "live"
       }
     }
   ],
+  "dependent_packages": [
+    {
+      "id": "memberpage.plugins",
+      "nuget_feed": "https://www.myget.org/F/docfx/api/v2",
+      "path_to_root": "_dependentPackages/memberpage.plugins",
+      "target_framework": "net45",
+      "version": "latest"
+    }
+  ],
+  "branch_target_mapping": {
+    "master": [
+      "Publish",
+      "Intellisense"
+    ]
+  },
   "need_generate_pdf_url_template": false,
   "Targets": {
     "Pdf": {
