open localization: commit translated files

--- a/toc.yml
+++ b/toc.yml
@@ -65,9 +65,12 @@
             - name: .NET Framework の並列プログラミング
               tocHref: /dotnet/standard/parallel-programming/
               topicHref: /dotnet/standard/parallel-programming/index
-            - name: .NET Framework におけるセキュリティ
+            - name: .NET でのセキュリティ
               tocHref: /dotnet/standard/security/
               topicHref: /dotnet/standard/security/index
+            - name: .NET でのシリアル化
+              tocHref: /dotnet/standard/serialization/
+              topicHref: /dotnet/standard/serialization/index
             - name: マネージ スレッド処理
               tocHref: /dotnet/standard/threading/
               topicHref: /dotnet/standard/threading/index
@@ -211,9 +214,6 @@
             - name: .NET Framework におけるセキュリティ
               tocHref: /dotnet/framework/security/
               topicHref: /dotnet/framework/security/index
-            - name: .NET Framework におけるシリアル化
-              tocHref: /dotnet/framework/serialization/
-              topicHref: /dotnet/framework/serialization/index
             - name: .NET Framework ツール
               tocHref: /dotnet/framework/tools/
               topicHref: /dotnet/framework/tools/index
