--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,7 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
+  "continue_with_document_error": true,
   "docsets_to_publish": [
     {
       "docset_name": "core-docs",
@@ -37,11 +38,12 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes"
+      "customized_template_paths": [
+        "_dependentPackages/memberpage.plugins/content"
+      ]
     }
   ],
-  "notification_subscribers": [],
-  "branches_to_filter": [],
+  "notification_subscribers": [ ],
   "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.ja-jp",
   "git_repository_branch_open_to_public_contributors": "live",
   "skip_source_output_uploading": false,
@@ -58,23 +60,27 @@
       "branch": "master"
     },
     {
-      "path_to_root": "_csharplang",
-      "url": "https://github.com/dotnet/csharplang",
-      "branch": "master"
-    },
-    {
-      "path_to_root": "_vblang",
-      "url": "https://github.com/dotnet/vblang",
-      "branch": "master"
-    },
-    {
       "path_to_root": "_repo.en-us",
       "url": "https://github.com/dotnet/docs",
+      "branch": "live"
+    },
+    {
+      "path_to_root": "dotnet-xref",
+      "url": "https://github.com/MicrosoftDocs/dotnet-xref",
       "branch": "live",
       "branch_mapping": {
-        "live": "live",
-        "master": "master"
+        "master": "master",
+        "live": "live"
       }
+    }
+  ],
+  "dependent_packages": [
+    {
+      "id": "memberpage.plugins",
+      "nuget_feed": "https://www.myget.org/F/docfx/api/v2",
+      "path_to_root": "_dependentPackages/memberpage.plugins",
+      "target_framework": "net45",
+      "version": "latest"
     }
   ],
   "branch_target_mapping": {
@@ -87,35 +93,5 @@
     "Pdf": {
       "template_folder": "_themes.pdf"
     }
-  },
-  "dependent_packages": [
-    {
-      "id": "Microsoft.DocAsCode.ECMA2Yaml",
-      "nuget_feed": "https://www.myget.org/F/op/api/v2",
-      "path_to_root": "_dependentPackages/ECMA2Yaml",
-      "target_framework": "net45",
-      "version": "latest"
-    },
-    {
-      "id": "memberpage.plugins",
-      "nuget_feed": "https://www.myget.org/F/docfx/api/v2",
-      "path_to_root": "_dependentPackages/memberpage.plugins",
-      "target_framework": "net45",
-      "version": "latest"
-    },
-    {
-      "id": "SplitToc",
-      "nuget_feed": "https://www.myget.org/F/op/api/v2",
-      "path_to_root": "_dependentPackages/splitToc",
-      "target_framework": "net45",
-      "version": "latest"
-    }
-  ],
-  "ECMA2Yaml": {
-    "SourceXmlFolder": "xml",
-    "SourceMetadataFolder": "add\\metadata",
-    "OutputYamlFolder": "api",
-    "Flatten": true
-  },
-  "toc_path_need_to_split": "api/toc.yml"
+  }
 }
