Commit non-bilingual content

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -41,7 +41,9 @@
     }
   ],
   "notification_subscribers": [],
-  "branches_to_filter": [],
+  "branches_to_filter": [
+    "live-sxs"
+  ],
   "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.ja-jp",
   "git_repository_branch_open_to_public_contributors": "live",
   "skip_source_output_uploading": false,
