--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,7 @@
 {
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
+   "continue_with_document_error": true,
   "docsets_to_publish": [
     {
       "docset_name": "core-docs",
