open localization: commit translated files

--- a/toc.yml
+++ b/toc.yml
@@ -22,7 +22,7 @@
             - name: 属性を使用したメタデータの拡張
               tocHref: /dotnet/standard/attributes/
               topicHref: /dotnet/standard/attributes/index
-            - name: .NET Framework における基本型の作業
+            - name: .NET における基本型の操作
               tocHref: /dotnet/standard/base-types/
               topicHref: /dotnet/standard/base-types/index
             - name: コレクションとデータ構造体
@@ -32,7 +32,7 @@
                 - name: スレッド セーフなコレクション
                   tocHref: /dotnet/standard/collections/thread-safe/
                   topicHref: /dotnet/standard/collections/thread-safe/index
-            - name: .NET Framework による複数のプラットフォームの開発
+            - name: .NET による複数のプラットフォームの開発
               tocHref: /dotnet/standard/cross-platform/
               topicHref: /dotnet/standard/cross-platform/index
             - name: XML ドキュメントと XML データ
@@ -53,16 +53,16 @@
             - name: ガベージ コレクション
               tocHref: /dotnet/standard/garbage-collection/
               topicHref: /dotnet/standard/garbage-collection/index
-            - name: .NET Framework におけるジェネリック
+            - name: .NET のジェネリック
               tocHref: /dotnet/standard/generics/
               topicHref: /dotnet/standard/generics/index
-            - name: グローバライズとローカライズ .NET Framework アプリケーションのグローバライズとローカライズ
+            - name: グローバライズとローカライズ
               tocHref: /dotnet/standard/globalization-localization/
               topicHref: /dotnet/standard/globalization-localization/index
             - name: ファイルおよびストリーム入出力
               tocHref: /dotnet/standard/io/
               topicHref: /dotnet/standard/io/index
-            - name: .NET Framework の並列プログラミング
+            - name: .NET での並列プログラミング
               tocHref: /dotnet/standard/parallel-programming/
               topicHref: /dotnet/standard/parallel-programming/index
             - name: .NET でのセキュリティ
@@ -91,10 +91,10 @@
             - name: 追加のクラス ライブラリおよび API
               tocHref: /dotnet/framework/additional-steps/
               topicHref: /dotnet/framework/additional-steps/index
-            - name: アプリケーション ドメインとアセンブリを使用したプログラミング
+            - name: アプリケーション ドメインとアセンブリ
               tocHref: /dotnet/framework/app-domains/
               topicHref: /dotnet/framework/app-domains/index
-            - name: .NET Framework の共通クライアント技術
+            - name: 共通クライアント技術
               tocHref: /dotnet/framework/common-client-technologies/
               topicHref: /dotnet/framework/common-client-technologies/index
             - name: 構成ファイルを使用してアプリを構成する方法
@@ -169,7 +169,7 @@
                 - name: トランザクション処理
                   tocHref: /dotnet/framework/data/transactions/
                   topicHref: /dotnet/framework/data/transactions/index
-                - name: WCF Data Services 4.5
+                - name: WCF Data Services
                   tocHref: /dotnet/framework/data/wcf/
                   topicHref: /dotnet/framework/data/wcf/index
             - name: デバッグ、トレース、およびプロファイリング
@@ -193,7 +193,7 @@
             - name: MEF (Managed Extensibility Framework)
               tocHref: /dotnet/framework/mef/
               topicHref: /dotnet/framework/mef/index
-            - name: .NET Framework 4.6 および 4.5 移行ガイド
+            - name: 移行ガイド
               tocHref: /dotnet/framework/migration-guide/
               topicHref: /dotnet/framework/migration-guide/index
             - name: .NET ネイティブによるアプリのコンパイル
