filter out live and live-sxs
to test C# Interactive Tutorial page on stage

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -45,7 +45,7 @@
     "CnE_Content_Brno@moravia.com",
     "CnE_UE_Bugfixing_ENG@moravia.com"
   ],
-  "branches_to_filter": [],
+  "branches_to_filter": [ "live", "live-sxs"],
   "git_repository_url_open_to_public_contributors": "https://github.com/dotnet/docs.ja-jp",
   "git_repository_branch_open_to_public_contributors": "live",
   "continue_with_document_error": true,
