Commit translated content

--- a/docs/csharp/quick-starts/branches-and-loops.yml
+++ b/docs/csharp/quick-starts/branches-and-loops.yml
@@ -3,7 +3,7 @@ documentType: Tutorial
 title: 分岐とループ
 metadata:
   title: 分岐とループ
-  description: '分岐とループに関するこのチュートリアルでは、c# の対話形式で学習するのにお使いのブラウザーを使用します。 しようとしている c# コードを記述してコンパイルして、ブラウザーで直接実行するコードの結果を参照してください。'
+  description: 'このチュートリアルでは、ブラウザーを使用して C# の分岐とループについて対話形式で学習できます。 C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。'
   audience: Developer
   level: Beginner
   displayType: two-column
@@ -13,11 +13,11 @@ metadata:
 items:
   - durationInMinutes: 1
     content: |
-      このチュートリアルでは、変数を検査し、それらの変数に基づいて実行パスを変更するコードを記述する方法について説明します。 記述 (C#)、対話的にお使いのブラウザーを使用して c# を記述しをコンパイルして、コードの実行の結果を参照してください。 一連分岐構造やループ構造 (C#) を探索するレッスンにはが含まれています。 これらのレッスンでは、c# 言語の基本を学習します。
-  - title: 場合を使用して決定ステートメント
+      このチュートリアルでは、変数を調べてその変数に基づいて実行パスを変更するコードを記述する方法について説明します。 ブラウザーを使用して対話形式で C# を記述し、コードをコンパイルして実行した結果を確認します。 このチュートリアルには、C# における分岐構造とループ構造を確認する一連のレッスンが含まれています。 これらのレッスンでは、C# 言語の基本を説明します。
+  - title: if ステートメントを使用した条件判断
     durationInMinutes: 4
     content: |
-      対話型のウィンドウで次のコードを実行します。 手順を実行する対話型ウィンドウで次のコード ブロックを入力し、をクリックして、**実行**ボタンをクリックします。
+      対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。
 
       ```csharp
       int a = 5;
@@ -26,29 +26,29 @@ items:
           Console.WriteLine("The answer is greater than 10.");
       ```
 
-      宣言を変更`b`合計が 10 未満であるようにします。 
+      合計が 10 未満になるように `b` の宣言を変更します。 
 
       ```csharp
       int b = 3;
       ```
 
-      クリックして、**実行**を再度クリックします。 答えが 10 未満であるため、何も出力されません。 **条件**できたらテストは、false を指定します。 のみを作成したの考えられる分岐のいずれかを実行するためのコードがない、`if`ステートメント: true の分岐。
+      もう一度 **[実行]** をクリックします。 計算結果が 10 未満であるため、何も出力されません。 判定中の**条件**が false になっています。 `if` ステートメントの考えられる分岐の 1 つである true 分岐のみを記述したため、実行すべきコードがありません。
 
       > [!TIP]
-      > C# (または任意のプログラミング言語) を探索するよう、コードを記述するときに、間違いを行うします。 **コンパイラ**はそれらのエラーを見つけてに報告します。 出力には、エラー メッセージが含まれている、よく見る、コード例では、そして修正内容を表示する対話型ウィンドウ内のコード。
-      > その手順を使用すると、c# コードの構造を学習できます。     
+      > C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。
+      > こうした実習が C# コードの構造を理解するのに役立ちます。     
 
-      この最初の例は、の機能を示しています`if`およびブール型です。 A*ブール*変数 2 つの値のいずれかです:`true`または`false`です。 C# の場合、特殊な種類の定義`bool`ブール値変数。 `if`ステートメントの値を調べて、`bool`です。 値が`true`、次のステートメント、`if`を実行します。 それ以外の場合はスキップされます。 
+      この最初のサンプルは、`if` とブール型の機能を示しています。 *ブール値*は、`true` または `false` という 2 つの値のいずれかを持つことができる変数です。 C# ではブール変数の `bool` という特殊な型を定義しています。 `if` ステートメントは、`bool` の値を確認します。 値が `true` の場合、`if` に続くステートメントを実行します。 それ以外の場合はスキップします。 
 
-      条件をチェックし、これらの条件に基づいて、ステートメントを実行するには、このプロセスは非常に強力です。 詳しく見てみましょう。
+      条件を確認してその条件に基づいてステートメントを実行するというこのプロセスは非常に機能的です。 さらに詳しく見てみましょう。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 場合し、連携するそれ以外の場合
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: if と else を組み合わせた使用
     durationInMinutes: 10
     content: |
 
-      別のコードを実行するには、true と false の両方の分岐内に作成、`else`条件が false の場合に実行する分岐です。 これを行います。
+      true 分岐と false 分岐で別々のコードを実行するには、条件が false のときに実行する `else` 分岐を作成します。 これを試してみます。
 
       ```csharp
       int a = 5;
@@ -59,13 +59,13 @@ items:
           Console.WriteLine("The answer is not greater than 10");
       ```
 
-      ステートメント、`else`キーワードは、テストされた条件がのときだけ実行される`false`です。 結合`if`と`else`とブール値条件により、すべて必要があります。
+      `else` キーワードに続くステートメントは、判定中の条件が `false` のときにのみ実行されます。 `if` と `else` をブール条件と組み合わせれば、必要な機能がすべて整います。
 
       > [!IMPORTANT]
-      > インデント、`if`と`else`ヒューマン リーダーのステートメントは、します。
-      > C# 言語がインデント設定、または空白文字ものとして扱います。 ステートメント、`if`または`else`キーワードは、条件に基づいて実行されます。 このチュートリアルでは、すべてのサンプルでは、実行に基づく行をインデントする一般的な方法に従います。
+      > `if` と `else` のステートメント内にあるインデントは、人が読みやすいようにするためのものです。
+      > C# 言語はインデントや空白文字を重要なものとして扱いません。 `if` や `else` のキーワードに続くステートメントは、条件に基づいて実行されます。 このチュートリアルでは、すべてのサンプルで一般的な記述方法を採用し、実行する行ごとにインデントを挿入しています。
 
-      インデントが重要でないため、使用する必要があります。`{`と`}`をする必要がある場合、条件付きで実行されるブロックの一部として複数のステートメントを示します。 C# プログラマは、すべてこれらの中かっこを使用する通常`if`と`else`句。 次の例では、作成したものと同じです。 お試しください。
+      インデントは重要ではないため、条件に基づいて実行するブロック内に 1 つ以上のステートメントがある場合には、`{` と `}` を使用して示します。 通常、C# プログラマーは `if` と `else` の句にはこの中かっこを使用します。 次の例は、さきほど作成したものと同じ内容です。 試してみてください。
 
       ```csharp
       int a = 5;
@@ -81,9 +81,9 @@ items:
       ```
 
       > [!TIP]
-      > このチュートリアルの残りの部分からすべてのコード サンプルは、後に、中かっこを含めるプラクティスを受け入れられます。
+      > このチュートリアルの残りの箇所では、一般に認められている記述方法に従って、すべてのコード サンプルで中かっこを使用しています。
 
-      複雑な条件をテストすることができます。
+      さらに複雑な条件を判定できます。
 
       ```csharp
       int a = 5;
@@ -101,9 +101,9 @@ items:
       }
       ```
 
-      `&&`を表す「と」です。 これは、両方の条件は、true の分岐でステートメントを実行する場合は true である必要がありますを意味します。  これらの例もを表示することができます各条件付き分岐の複数のステートメントで囲んで指定`{`と`}`です。
+      `&&` は "and" (および) を表します。 これは、true 分岐でステートメントを実行するには、両方の条件が true になる必要があることを意味しています。  また、これらの例では、ステートメントが `{` と `}` で囲まれていれば、各条件分岐に複数のステートメントを持つことができることを示しています。
 
-      使用することも`||`を表す「または」。
+      "or" (または) を表すために `||` を使用することもできます。
 
       ```csharp
       int a = 5;
@@ -122,11 +122,11 @@ items:
       ```
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: ループを使用して、操作を繰り返します
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: ループを使用した処理の繰り返し
     durationInMinutes: 6
     content: |
-      大規模なプログラムを作成するもう 1 つの重要な概念は**ループ**です。 複数回実行するステートメントを繰り返すループを使用します。 対話型のウィンドウでこのコードを試してください。
+      大規模なプログラムを作成する上でもう 1 つ重要な概念は、**ループ**です。 複数回実行したいステートメントは、ループを使用して繰り返します。 対話型ウィンドウで次のコードを試します。
 
       ```csharp
       int counter = 0;
@@ -137,14 +137,14 @@ items:
       }
       ```
 
-      `while`ステートメントは、条件をチェックして、ステートメントの実行、`while`です。 条件を確認し、条件が false になるまで、これらのステートメントを実行する繰り返されます。
+      `while` ステートメントは、条件を確認して `while` に続くステートメントを実行します。 条件が false になるまで、条件の確認とステートメントの実行を繰り返します。
 
-      この例ではその他の 1 つの新しい演算子があります。 `++`後、`counter`変数は、**インクリメント**演算子。 カウンターの値に 1 を加算し、カウンター変数にその値を格納します。
+      この例では、もう 1 つ新しい演算子が使用されています。 `counter` 変数のあとにある `++` は、**インクリメント**演算子です。 counter の値に 1 を追加し、その値を counter 変数に格納します。
 
       > [!IMPORTANT]
-      > 確認して、`while`ループの条件が false に切り替えるはコードを実行するとします。 作成するそれ以外の場合、**無限ループ**しないで、プログラムの終了位置。 それでは、エンジンが実行されるため、コードはタイムアウトが発生するとします出力が得られますなし、プログラムからは示しません。
+      > コードを実行したときに `while` のループ条件が false に切り替わることを確認してください。 それ以外の場合は、プログラムが終了することのない**無限ループ**を作成します。 これについては実演しません。コードを実行するエンジンがタイムアウトしてプログラムから何も出力されないからです。
 
-      `while`ループでは、条件をテスト コードの次を実行する前に、`while`です。 `do`しています.`while`ループに最初に、コードを実行し、条件をチェックします。 次のようにします。
+      `while` ループは、条件を判定してから `while` に続くコードを実行します。 `do` ... `while` ループは、最初にコードを実行してからその条件を確認します。 次のようになります。
 
       ```csharp
       int counter = 0;
@@ -155,16 +155,16 @@ items:
       } while (counter < 10);
       ```
 
-      これは、`do`ループと以前`while`ループは、同じ動作です。 
+      この `do` ループと先述の `while` ループは同じ機能を持っています。 
 
-      最後の 1 つのループ ステートメントに進みましょう。
+      では、最後のループ ステートメントの確認に移りましょう。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 使用、for ループ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: for ループの処理
     durationInMinutes: 5
     content: |
-      C# コードで表示される別の一般的な loop ステートメントは、`for`ループします。 対話型のウィンドウでこのコードを試してください。
+      C# コードでよく目にするもう 1 つのループ ステートメントは、`for` ループです。 対話型ウィンドウで次のコードを試します。
 
       ```csharp
       for(int counter = 0; counter < 10; counter++)
@@ -173,42 +173,42 @@ items:
       } 
       ```
 
-      同じ作業は、`while`ループと`do`ループが既に使用しています。 `for`ステートメントではその動作を制御する 3 つの部分です。 
+      このループは、既に使用した `while` ループや `do` ループと同じ機能を持っています。 `for` ステートメントは 3 つの部分に分かれてその機能を制御します。 
 
-      最初の部分は、**初期化子の**:`for counter = 0;`を宣言する`counter`ループ変数は、その初期値に設定`0`です。
+      最初の部分は、**for 初期化子**です。`for counter = 0;` は、`counter` がループ変数であることを宣言し、その初期値を `0` に設定しています。
 
-      中間部品、**条件の**:`counter < 10`宣言この`for`ループがカウンターの値が 10 未満である限りの実行を継続します。
+      2 つ目の部分は、**for 条件**です。`counter < 10` は、counter の値が 10 未満である間は `for` ループが実行され続けることを宣言しています。
 
-      最後の部分は、**反復子の**:`counter++`ブロック次を実行した後、ループ変数を変更する方法を指定します、`for`ステートメントです。 ここでは、ことを指定`counter`ブロックが実行されるたびに 1 つずつ増加する必要があります。
+      最後の部分は、**for 反復子**です。`counter++` は、`for` ステートメントに続くブロックを実行したあとにループ変数を変更する方法を指定しています。 ここでは、ブロックが実行されるごとに `counter` が 1 ずつ増加するよう指定しています。
 
-      自分で試してください。 次のそれぞれの操作を行います。
+      ご自身でこれを実行してみてください。 以下をそれぞれ試してみます。
 
-      - 開始点が、別の値に初期化子を変更します。
-      - 別の値で停止する条件を変更します。
+      - 初期化子を変更して別の値で開始する。
+      - 条件を変更して別の値で停止する。
 
-      完了したらに移動してみましょう書き込みにあるコードが自分で学習した内容を使用します。
+      完了したら次に進み、学習したことを使用して自分でいくつかのコードを記述してみましょう。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 結合の分岐とループ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 分岐とループの組み合わせ
     durationInMinutes: 12
     content: |
-      これで、見たこと、`if`ステートメントとループ構造、c# 言語のかどうかは、1 ~ 3 で割り切れる 20 のすべての整数の合計を検索する c# コードを記述することができますを参照してください。  次に、いくつかのヒントを示します。
+      C# 言語における `if` ステートメントとループ構造を見てきました。では、1 から 20 の整数のうち 3 で割り切れる数の合計を求める C# コードを記述できるか確認してみましょう。  次にいくつかヒントを示します。
 
-      - `%`演算子は、除算演算の余りを提供します。
-      - `if`ステートメント givesx する条件が、数が合計の一部にする必要があるかどうかを参照してください。
-      - `for`ループを使用して、すべての数値 1 20 からの一連の手順を繰り返してできます。
+      - `%` 演算子は、除算演算の剰余を算出します。
+      - `if` ステートメントは、合計に入れるべき数かどうかを確認する条件を作ります。
+      - `for` ループは、1 から 20 までのすべての数を 1 つずつ確認する一連の手順を繰り返すのに役立ちます。
 
-      試してみよう自分でします。 した方法を確認します。
+      ご自身で試してみてください。 そして自分がとった方法を確認してください。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 完全なチャレンジ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 課題完了
     durationInMinutes: 1
     content: |
-      「分岐とループ」チュートリアルを完了しました。 次のトピックでこれらの概念の詳細を学習できます。
+      これで "分岐とループ" に関するチュートリアルは終了です。 次のトピックでこれらの概念の詳細を学習できます。
 
-      [場合、else ステートメント](../language-reference/keywords/if-else.md)   
-      [While ステートメント](../language-reference/keywords/while.md)   
-      [Do ステートメント](../language-reference/keywords/do.md)   
-      [For ステートメント](../language-reference/keywords/for.md)
+      [if と else ステートメント](../language-reference/keywords/if-else.md)   
+      [while ステートメント](../language-reference/keywords/while.md)   
+      [do ステートメント](../language-reference/keywords/do.md)   
+      [for ステートメント](../language-reference/keywords/for.md)
