--- a/docs/csharp/quick-starts/hello-world.yml
+++ b/docs/csharp/quick-starts/hello-world.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: 'こんにちは (C#)'
+title: 'Hello C#'
 metadata:
-  title: 'こんにちは c# です。 C# 言語に、最初の概要です。'
-  description: 'このチュートリアルでは、c# の対話形式で学習するのにブラウザーを使用します。 C# コードを記述してコンパイルして、ブラウザーで直接実行するコードの結果を参照してください。'
+  title: 'Hello C#。 C# 言語の最初の導入です。'
+  description: 'このチュートリアルでは、ブラウザーを使用して C# を対話形式で学習できます。 C# コードを記述し、ブラウザーで直接コードをコンパイルして、実行した結果を確認します。'
   audience: Developer
   level: Beginner
   nextTutorialHref: numbers-in-csharp
@@ -13,65 +13,65 @@ metadata:
 items:
   - durationInMinutes: 1
     content: |
-      このチュートリアルで説明する C# の場合、対話的にお使いのブラウザーを使用して c# を記述しをコンパイルして、コードの実行の結果を参照してください。 一連"Hello World"プログラムで始まるレッスンにはが含まれています。 これらのレッスンでは、c# 言語の基本を学習します。
-  - title: '最初の c# プログラムを実行します。'
+      このチュートリアルでは C# を対話形式で学習できます。ブラウザーを使用して C# を記述し、コードをコンパイルして実行した結果を確認します。 このチュートリアルには、"Hello World" プログラムを開始する一連のレッスンが含まれています。 これらのレッスンでは、C# 言語の基本を説明します。
+  - title: '最初の C# プログラムの実行'
     durationInMinutes: 2
     content: |
-      対話型のウィンドウで次のコードを実行します。 手順を実行する対話型ウィンドウで次のコード ブロックを入力し、をクリックして、**実行**ボタンをクリックします。
+      対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。
 
       ```csharp
       Console.WriteLine("Hello World!");
       ```
 
-      おめでとうございます!  最初の c# プログラムを実行しました。 "Hello World!"メッセージを出力する単純なプログラムすることをお勧めします。 使用して、<xref:System.Console.WriteLine%2A?displayProperty=nameWithType>メソッドをそのメッセージを出力します。 `Console`コンソール ウィンドウを表す型です。 `WriteLine`メソッドは、`Console`行のテキストをコンソールにテキストを出力する型。
+      おめでとうございます!  最初の C# プログラムを実行しました。 これは "Hello World!" というメッセージを出力する単純なプログラムです。 <xref:System.Console.WriteLine%2A?displayProperty=nameWithType> メソッドを使用してこのメッセージを出力しました。 `Console` は、コンソール ウィンドウを表す型です。 `WriteLine` は、そのテキスト コンソールに 1 行のテキストを出力する `Console` 型の 1 つのメソッドです。
 
-      上に移動し、詳細を探索してみましょう。 このレッスンの残りの部分の使用を検討、`string`型で、c# でのテキストを表します。 同様に、`Console`の種類、`string`型メソッドがあります。 `string`のテキストのメソッドを使用します。 
+      次に進んで、さらに詳しく見てみましょう。 このレッスンの残りの部分では、C# においてテキストを表す `string` 型の機能を確認します。 `Console` 型と同じように、`string` 型にもメソッドがあります。 `string` メソッドはテキストを処理します。 
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 宣言し、変数の使用
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 変数の宣言と使用
     durationInMinutes: 3
     content: |
-      最初のプログラムの印刷、 `string` "Hello World!" 画面でします。 
+      最初のプログラムでは、`string` の "Hello World!" を 画面に出力しました。 
 
       > [!TIP]
-      > C# (または任意のプログラミング言語) を探索するよう、コードを記述するときに、間違いを行うします。 **コンパイラ**はそれらのエラーを見つけてに報告します。 出力には、エラー メッセージが含まれている、よく見る、コード例では、そして修正内容を表示する対話型ウィンドウ内のコード。
-      > その手順を使用すると、c# コードの構造を学習できます。 
+      > C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。
+      > こうした実習が C# コードの構造を理解するのに役立ちます。 
 
-      最初のプログラムは、1 つのメッセージを印刷に制限されます。 使用してさらに便利なプログラムを作成することができます**変数**です。 A**変数**をさまざまな値を同じコードを実行する際の記号。 試してみましょう。 次のコードを対話形式のウィンドウで作成したコードに置き換えます。
+      最初のプログラムは、1 つのメッセージしか出力できません。 **変数**を使用すると、もっと役立つプログラムを記述できます。 **変数**は、同じコードを別の値で実行するのに使用できる記号です。 試してみましょう。 対話型ウィンドウで記述したコードを次のコードに置き換えます。
 
       ```csharp
       string aFriend = "Bill";
       Console.WriteLine(aFriend);
       ```
 
-      最初の行は、変数を宣言`aFriend`「請求書」の値を割り当てます。 2 番目の行は、名前を出力します。
+      最初の行で変数 `aFriend` を宣言し、その変数に "Bill" という値を代入しています。 2 番目の行でその名前を出力しています。
 
-      任意の変数を宣言するには、別の値を割り当てることができます。 あなたの友だちのいずれかに名前を変更できます。 次のコードを追加した対話形式のウィンドウで、2 つの行を追加します。
+      宣言した変数に別の値を代入できます。 この名前を友人の名前に変更できます。 対話型ウィンドウで、先ほど追加したコードのあとに次の 2 行を追加します。
 
       ```csharp
       aFriend = "Maria";
       Console.WriteLine(aFriend);
       ```
 
-      コードの同じ行に格納されている値に基づいて、2 つの異なるメッセージを出力する、`aFriend`変数。
+      `aFriend` 変数に格納された値に基づいて、コードの同じ行に 2 つの異なるメッセージが表示されていることに注目してください。
 
-      お気付き"hello"が、最後の 2 つのメッセージに表示されないことです。 今すぐ修正してみましょう。  次に、メッセージを出力する、行を変更します。
+      お気付きかと思いますが、最後の 2 つのメッセージから "Hello" という言葉がなくなっています。 修正しましょう。  メッセージを出力する行を次のように変更します。
 
       ```csharp
       Console.WriteLine("Hello " + aFriend);
       ```
 
-      をクリックして**実行**結果を表示するには、もう一度です。
+      もう一度 **[実行]** をクリックして結果を確認します。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 文字列を操作します。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 文字列の処理
     durationInMinutes: 5
     content: |
-      最新の変更は、文字列で行うことで、最初に表示をでした。 詳しく見てみましょう。
+      先ほどの編集を通して、文字列を使って何ができるかを初めて確認しました。 さらに詳しく見てみましょう。
 
-      `+` (C#) 演算子と呼びます。 などの文字列に適用されると`firstString + secondString`、最初の 2 番目のテキストに続くテキストを含む新しい文字列を作成します。 これを呼びます*文字列連結*です。 任意の数の文字列変数を含む文字列を組み合わせることができます。  これを行います。
+      `+` は C# において演算子と呼ばれるものの 1 つです。 `firstString + secondString` のように文字列に適用すると、1 つ目のテキストに 2 つ目のテキストが続く新しいテキストが作成されます。 これを*文字列の連結*と言います。 文字列変数も含めて、文字列をいくつでも連結できます。  これを試してみます。
 
       ```csharp
       string firstFriend = "Maria";
@@ -79,7 +79,7 @@ items:
       Console.WriteLine("My friends are " + firstFriend + " and " + secondFriend);
       ```
 
-      使用して文字列の長さを検索できる場合は、複数の文字列を使用、`Length`です。 `Length`**プロパティ**は文字列と、その文字列の文字の数を返します。 対話型ウィンドウの下部に次のコードを追加します。
+      文字列についてさらに詳しく見ていきます。`Length` を使用して文字列の長さを知ることができます。 `Length` は文字列の**プロパティ**であり、その文字列の文字数を返します。 対話型ウィンドウの下部に次のコードを追加します。
 
       ```csharp
       Console.WriteLine("The name " + firstFriend + " has " + firstFriend.Length + " letters.");
@@ -87,16 +87,16 @@ items:
       ```
 
       > [!TIP]
-      > これは、自分で探索する絶好のタイミングです。 学習した`Console.WriteLine()`画面にテキストを書き込みます。 変数を宣言し、文字列を連結する方法を学習しました。 対話型のウィンドウで確認します。 一部の複数のメッセージを自分で作成します。 使用して文字列を構築、`+`演算子。
+      > このあたりで、自分で試してみるといいでしょう。 `Console.WriteLine()` を使用して画面にテキストを出力できることを学習しました。 変数を宣言して文字列同士を連結する方法についても学習しました。 対話型ウィンドウで実際に確認してみてください。 自分でより多くのメッセージを記述してみるとよいでしょう。 `+` 演算子を使用して文字列を作成してください。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 文字列をより
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 文字列の追加操作
     durationInMinutes: 5
     content: |
-      使用した、**メソッド**、<xref:System.Console.WriteLine%2A?displayProperty=nameWithType>メッセージを印刷します。 A**メソッド**何らかのアクションを実装するコードのブロックです。 これにアクセスできるように、名前を持ちます。 
+      メッセージを出力するのに <xref:System.Console.WriteLine%2A?displayProperty=nameWithType> **メソッド**を使用してきました。 **メソッド**は、何らかのアクションを実装したコードのブロックです。 メソッドに名前があることで、それにアクセスできます。 
 
-      `string`型には多くの便利なメソッドです。 見てみましょう、<xref:System.String.Trim%2A>メソッド、および関連する<xref:System.String.TrimStart%2A>と<xref:System.String.TrimEnd%2A>です。 これらのメソッドは、先頭と末尾のスペースを削除します。
+      `string` 型には多くの便利なメソッドがあります。 <xref:System.String.Trim%2A> メソッドと、それに関連した <xref:System.String.TrimStart%2A> と <xref:System.String.TrimEnd%2A> メソッドを使ってみましょう。 これらのメソッドは、先頭と末尾にあるスペースを削除します。
 
       ```csharp
       string message = "      Hello World!       ";
@@ -112,9 +112,9 @@ items:
       Console.WriteLine("[" + trimmedMessage + "]");
       ```
 
-      このサンプルでは、いくつかの文字列を操作するための重要な概念を助けます。 文字列操作メソッドは、場所に変更を加えるのではなく、新しい文字列オブジェクトを返します。 いずれかを呼び出すたび、`Trim`メソッドは、新しい文字列を返しますが、元のメッセージを変更しません。
+      このサンプルでは、文字列を処理するための重要な概念のいくつかを説明しています。 文字列を操作するメソッドは、定位置に変更を加えるのではなく、新しい文字列オブジェクトを返します。 `Trim` メソッドのいずれかに対する各呼び出しは新しい文字列を返すが元のメッセージを変更しない、ということが確認できます。
 
-      文字列を使用する利用可能なその他の方法はあります。 たとえば、検索を使用している可能性がありますし、エディターやワード プロセッサでコマンドの代わりにします。 <xref:System.String.Replace%2A>メソッドでは以下のように、`string`です。 、部分文字列を検索し、別のテキストに置き換えます。 <xref:System.String.Replace%2A>メソッドを受け取って 1 つ**パラメーター**です。 これらは、かっこ内の文字列です。 最初の文字列は、検索するテキストです。 2 番目の文字列は、名前を置き換えるテキストです。 ご自分で試してください。 このコードを追加します。
+      文字列を処理するメソッドは他にもあります。 たとえば、エディターやワード プロセッサで検索と置換のコマンドを使用したことがあるかもしれません。 <xref:System.String.Replace%2A> メソッドはそれと似た処理を `string` で行います。 このメソッドは部分文字列を検索し、それを別のテキストに置き換えます。 <xref:System.String.Replace%2A> メソッドは、2 つの**パラメーター**を受け取ります。 パラメーターは丸かっこ内の文字列です。 最初の文字列は、検索対象のテキストです。 2 つ目の文字列は、置換後のテキストです。 ご自分で試してみてください。 このコードを追加します。
 
       ```csharp
       string message = "Hello World!";
@@ -123,7 +123,7 @@ items:
       Console.WriteLine(message);
       ```
 
-      その他の 2 つの便利なメソッドは、文字列のすべて大文字またはすべて小文字に変換を行います。 次のコードを試してください。
+      その他にも役立つメソッドが 2 つあり、1 つは文字列のすべてを大文字にし、もう 1 つは文字列のすべてを小文字にします。 次のコードを試してみてください。
 
       ```csharp
       string message = "Hello World!";
@@ -133,11 +133,11 @@ items:
       ```
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
   - title: 検索文字列
     durationInMinutes: 10
     content: |
-      もう 1 つの*検索し、置換*操作は、文字列内のテキストを検索します。 使用することができます、<xref:System.String.Contains%2A>メソッドを検索します。 かどうか、内部の部分文字列を含む文字列を示します。 次のコードの探索を実行してください<xref:System.String.Contains%2A>:
+      *検索と置換*の演算子は他にも、文字列内のテキストを検索できます。 検索には <xref:System.String.Contains%2A> メソッドを使用できます。 これにより、文字列内に部分文字列が含まれているかどうかを確認できます。 次のコードを試してみて、<xref:System.String.Contains%2A> を確認してください。
 
       ```csharp
       string message = "You say goodbye, and I say hello";
@@ -145,21 +145,21 @@ items:
       Console.WriteLine(message.Contains("greetings"));
       ```
 
-      <xref:System.String.Contains%2A>メソッドを返します、**ブール**値を検索する文字列が見つかったかどうかことが示されます。 A**ブール**格納するか、`true`または`false`値。 詳しくは**ブール**後のレッスン内の値。
+      <xref:System.String.Contains%2A> メソッドは**ブール値**を返し、検索した文字列が見つかったかどうかを知らせます。 **ブール値**は `true` か `false` どちらかの値を格納します。 **ブール値**については、この後のレッスンで詳しく学習します。
 
-      ***チャレンジ***
+      ***課題***
 
-      2 つのような方法はあります<xref:System.String.StartsWith%2A>と<xref:System.String.EndsWith%2A>も文字列でサブ文字列を検索します。 これらは、文字列の末尾または先頭に部分文字列を検索します。 使用する前のサンプルを変更しようとしています。<xref:System.String.StartsWith%2A>と<xref:System.String.EndsWith%2A>の代わりに<xref:System.String.Contains%2A>です。 文字列の先頭に"goodbye"または「する」を検索します。 「こんにちは」または文字列の末尾に"goodbye"を検索します。
+      似たような 2 つのメソッドがあり、<xref:System.String.StartsWith%2A> と <xref:System.String.EndsWith%2A> も文字列内の部分文字列を検索します。 これらは文字列の先頭または末尾の部分文字列を検索します。 先述のサンプルを変更して、<xref:System.String.Contains%2A> の代わりに <xref:System.String.StartsWith%2A> と <xref:System.String.EndsWith%2A> を使用してみてください。 文字列の先頭にある "You" または "goodbye" を検索します。 文字列の末尾にある "hello" または "goodbye" を検索します。
 
       > [!Note]
-      > 文字列の末尾にテキストをテストするときに、句読点をご覧ください。 文字列は、ピリオドで終了した場合は、ピリオドで終了する文字列をチェックする必要があります。
+      > 文字列の末尾にあるテキストをテストするときは、句読点に注意します。 文字列が句点で終わる場合は、末尾に句点を含めた文字列を検索する必要があります。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 完全なチャレンジ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 課題完了
     durationInMinutes: 3
     content: |
-      でした用意するおくと次のようにしますか。
+      コードは次のようになりましたか?
 
       ```csharp
       string message = "You say goodbye, and I say hello";
@@ -171,8 +171,8 @@ items:
       ```
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
   - content: |
-      「こんにちは c#」チュートリアルを完了しました。
+      "Hello C#" チュートリアルはこれで終了です。
 
-      作業方法について学習することができます、`string`に入力、 [c# プログラミング ガイド](../programming-guide/index.md)に関するトピック[文字列](../programming-guide/strings/index.md)です。
+      `string` 型の機能の詳細については、「[C# プログラミング ガイド](../programming-guide/index.md)」の[文字列](../programming-guide/strings/index.md)に関するトピックで学習できます。
