--- a/docs/csharp/quick-starts/list-collection.yml
+++ b/docs/csharp/quick-starts/list-collection.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: 'コレクション (C#)'
+title: 'C# のコレクション'
 metadata:
-  title: 'C# でのコレクション。 C# でのシーケンスとそのコレクションの使用について説明します。'
-  description: 'このチュートリアルでは、c# の対話形式で学習するのにブラウザーを使用します。 C# コードを記述してコンパイルして、ブラウザーで直接実行するコードの結果を参照してください。'
+  title: 'C# のコレクション。 C# のシーケンスとコレクションの使用方法について説明します。'
+  description: 'このチュートリアルでは、ブラウザーを使用して C# を対話形式で学習できます。 C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。'
   audience: Developer
   level: Beginner
   displayType: two-column
@@ -11,11 +11,11 @@ metadata:
 items:
   - durationInMinutes: 1
     content: |
-      このチュートリアルで説明する C# の場合、対話的にお使いのブラウザーを使用して c# を記述しをコンパイルして、コードの実行の結果を参照してください。 一連作成、変更、およびコレクションと配列を調査するレッスンにはが含まれています。
-  - title: リストを作成します。
+      このチュートリアルでは C# を対話形式で学習できます。ブラウザーを使用して C# を記述し、コードをコンパイルして実行した結果を確認します。 このチュートリアルには、コレクションと配列を作成、変更、確認する一連のレッスンが含まれています。
+  - title: リストを作成する
     durationInMinutes: 2
     content: |
-      対話型のウィンドウで次のコードを実行します。 手順を実行するには、対話型ウィンドウで次のコード ブロックを入力 (交換"<name>"、名前を持つ) をクリックし、**実行**ボタン。
+      対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し ("<name>" を自分の名前に置き換えて)、**[実行]** をクリックします。
 
       ```csharp
       var names = new List<string> { "<name>", "Ana", "Felipe" };
@@ -25,20 +25,20 @@ items:
       }
       ```
 
-      だけ文字列のリストを作成、そのリストに 3 つの名前を追加してすべて大文字で名前を印刷します。 一覧をループする以前のクイック スタートで学習した概念を使用しています。
+      文字列のリストを作成し、そのリストに 3 つの名前を追加し、それらの名前をすべて大文字で出力しました。 先のクイック スタートで学習した概念を使用して、リストをループしています。
 
-      名前を表示するコードでは、使用**補間文字列**です。  前に指定するときに、`string`で、`$`文字、文字列の宣言での c# コードを埋め込むことができます。 実際の文字列を生成値に c# コードを置き換えます。 この例では置き換えられます、`{name.ToUpper()}`各名前を持つために、変換英大文字、呼び出したのと、<xref:System.String.ToUpper%2A>メソッドです。
+      名前を表示するコードは、**補間文字列**を使用します。  `string` の前に文字 `$` を配置すると、文字列宣言に C# コードを埋め込むことができます。 実際の文字列は、生成する値でその C# コードを置き換えます。 この例では、<xref:System.String.ToUpper%2A> メソッドを呼び出したため、文字列は `{name.ToUpper()}` をそれぞれの名前に置き換え、文字を大文字に変換しています。
 
-      みましょうの探索してください。
+      続けて確認していきましょう。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 変更内容の一覧表示
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: リスト コンテンツを変更する
     durationInMinutes: 3
     content: |
-      使用して作成したコレクション、<xref:System.Collections.Generic.List%601>型です。 この型は、要素のシーケンスを格納します。 山かっこ間の要素の種類を指定するとします。
+      作成したコレクションは <xref:System.Collections.Generic.List%601> 型を使用します。 この型は、要素のシーケンスを格納します。 要素の型を山かっこの内側で指定します。
 
-      この 1 つの重要な側面<xref:System.Collections.Generic.List%601>型は、拡大または縮小、でく要素を追加または削除できるようにすることです。 既に記述したコードの下の次のコードを追加します。
+      この <xref:System.Collections.Generic.List%601> 型の重要な点は増減が可能で、要素を追加したり削除したりできることです。 既に記述したコードの下に、次のコードを追加します。
 
       ```csharp
       Console.WriteLine();
@@ -51,29 +51,29 @@ items:
       }
       ```
 
-      2 つ以上の名前は、リストの末尾に追加されました。 したも 1 つも削除します。
+      さらに 2 つの名前をリストの末尾に追加しました。 また、1 つを削除しました。
 
-      <xref:System.Collections.Generic.List%601>個々 のアイテムを参照することができます**インデックス**もします。 使用した項目にアクセスする、`[`と`]`トークンです。 どのような書き込んだしようとすること、次のコードを追加します。
+      <xref:System.Collections.Generic.List%601> を使用すると、**インデックス**でも個々の項目を参照できます。 `[` と `]` のトークンを使用して項目にアクセスします。 既に記述したコードの下に、次のコードを追加して試してみます。
 
       ```csharp
       Console.WriteLine($"My name is {names[0]}.");
       Console.WriteLine($"I've added {names[2]} and {names[3]} to the list.");
       ```
 
-      リストの末尾へのアクセスを許可していません。 一覧がどのくらいの期間を使用しているかをチェックすることができます、<xref:System.Collections.Generic.List%601.Count%2A>プロパティです。 試してみように次のコードを追加します。
+      リストの末尾を越えてアクセスすることはできません。 <xref:System.Collections.Generic.List%601.Count%2A> プロパティを使用すれば、リストの長さを確認できます。 次のコードを追加して試してみます。
 
       ```csharp
       Console.WriteLine($"The list has {names.Count} people in it");
       ```
 
-      をクリックして**実行**結果を表示するには、もう一度です。 C# の場合、インデックスは 0 から始まる、有効なインデックスの最大値であるため、リスト内の項目の数よりも小さいです。
+      もう一度 **[実行]** をクリックして結果を確認します。 C# ではインデックスは 0 から始まるため、有効なインデックスの最大値はリスト内の項目の数より 1 小さくなります。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 検索および並べ替えリスト
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: リストを検索して並び替える
     durationInMinutes: 5
     content: |
-      サンプルは、比較的小さいリストを使用してですが、アプリケーションで、多くの詳細要素と、数千に達しますのリストを作成ことが多くの場合、可能性があります。 これらの大規模なコレクション内の要素を検索、さまざまなアイテムの一覧を検索する必要があります。 <xref:System.Collections.Generic.List%601.IndexOf%2A>メソッド アイテムを検索し、項目のインデックスを返します。 この動作を確認してください。  これまで入力した、次のコードを追加します。
+      サンプルでは比較的小さいリストを使用していますが、ご利用のアプリケーションでは、より多くの (場合によっては何千もの) 要素が含まれるリストを作成することもよくあるかもしれません。 そうした大規模なコレクションの中から要素を見つけるには、別々の項目をリストで検索する必要があります。 <xref:System.Collections.Generic.List%601.IndexOf%2A> メソッドは項目を検索し、その項目のインデックスを返します。 これを試して動作を確認してください。  これまでに記述したコードの下に、次のコードを追加します。
 
       ```csharp
       var index = names.IndexOf("Felipe");
@@ -84,9 +84,9 @@ items:
         Console.WriteLine($"When an item is not found, IndexOf returns {notFound}");
       ```
 
-      わからないかどうか、項目は一覧で、によって返されるインデックスを常に確認する必要がありますので<xref:System.Collections.Generic.List%601.IndexOf%2A>です。 -1 の場合、項目は見つかりませんでした。
+      リストに項目があるかどうかわからないこともあるため、常に <xref:System.Collections.Generic.List%601.IndexOf%2A> によって返されるインデックスをチェックする必要があります。 それが -1 だった場合は、項目が見つからなかったことを意味します。
 
-      リスト内の項目も並べ替えられます。 <xref:System.Collections.Generic.List%601.Sort%2A>メソッド (文字列) の場合にアルファベット順に、通常の順序で一覧のすべての項目を並べ替えます。 このコードを追加し、もう一度実行します。
+      同じように、リスト内の項目を並び替えできます。 <xref:System.Collections.Generic.List%601.Sort%2A> メソッドは、リスト内のすべての項目を正規順序 (文字列の場合はアルファベット順) で並び替えます。 次のコードを追加し、もう一度実行します。
 
       ```csharp
       names.Sort();
@@ -97,17 +97,17 @@ items:
       ```
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: その他の種類の一覧
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: その他の型のリスト
     durationInMinutes: 5
     content: |
-      使用した、`string`これまでのリストを入力します。 こちらから、<xref:System.Collections.Generic.List%601>別の種類を使用します。 数値のセットを構築してみましょう。 これまでに記述したコードを削除し、これを置き換えます。
+      ここまでは、リスト内で `string` 型を使用してきました。 別の型を使用して <xref:System.Collections.Generic.List%601> を作成してみましょう。 数値のセットを作成します。 これまでに記述したコードを削除し、次のコードに置き換えます。
 
       ```csharp
       var fibonacciNumbers = new List<int> {1, 1};
       ```
 
-      整数のリストを作成し、最初の 2 つの整数を値 1 に設定します。 これは、値は、最初の 2 つの*フィボナッチ シーケンス*一連の数値。 各次のフィボナッチ数は、前の 2 つの数値の合計を取得して検出されます。 このコードを追加します。
+      これにより整数のリストが作成され、最初の 2 つの整数が値 1 に設定されます。 これらは、数列の 1 つである*フィボナッチ数列*の最初の 2 つの値です。 次のフィボナッチ数はそれぞれ、その直前の 2 つの数値の合計を取得することによって得られます。 このコードを追加します。
 
       ```csharp
       var previous = fibonacciNumbers[fibonacciNumbers.Count - 1];
@@ -119,21 +119,21 @@ items:
           Console.WriteLine(item);
       ```
 
-      キーを押して**実行**; 結果を表示するには
+      **[実行]** をクリックして結果を確認します。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: チャレンジ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 課題
     durationInMinutes: 10
     content: |
-      一緒に配置できるかどうかを参照してください。 ここから、前のレッスンの一部のレッスンです。 新機能を作成したらこれまでフィボナッチの数列を展開します。 シーケンスの最初の 20 個の番号を生成するコードを記述してください。
+      このレッスンと以前のレッスンの中から、いくつかのレッスンの内容をまとめて理解できているかどうかを確認してみましょう。 ここまでフィボナッチ数を使用して作成してきたコードを使ってください。 シーケンスの最初の 20 個の数を生成するコードを記述してみましょう。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 完全なチャレンジ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 課題完了
     durationInMinutes: 3
     content: |
-      でした用意するおくと次のようにしますか。
+      コードは次のようになりましたか? 
 
       ```csharp
       var fibonacciNumbers = new List<int> {1, 1};
@@ -149,11 +149,11 @@ items:
           Console.WriteLine(item);
       ```
 
-      一覧にその値を追加、集計、および、ループの反復ごとの最後の 2 つの整数の一覧でに移動しています。 ループは、20 個のアイテムを一覧に追加するまで繰り返されます。
+      ループの繰り返しごとに、リストの最後の 2 つの整数を取得して合計し、その値をリストに追加しています。 このループは、20 個の項目がリストに追加されるまで繰り返されます。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
   - content: |
-      リストのチュートリアルを完了しました。
+      リストについてのチュートリアルはこれで終了です。
 
-      作業方法について学習することができます、`List`に入力、 [.NET ガイド](../../standard/index.md)に関するトピック[コレクション](../../standard/collections/index.md)です。 その他の多くのコレクション型についても学習します。
+      `List` 型の使用方法の詳細については、[.NET ガイド](../../standard/index.md)の[コレクション](../../standard/collections/index.md)に関するトピックで学習できます。 その他の多くのコレクション型についても学習できます。
