--- a/docs/csharp/quick-starts/numbers-in-csharp.yml
+++ b/docs/csharp/quick-starts/numbers-in-csharp.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: 'C# での数値'
+title: 'C# の数値'
 metadata:
-  title: 'C# での数値'
-  description: '数値型に関するこのチュートリアルでは、ブラウザーを使用して、対話的に c# について学習します。 しようとしている c# コードを記述してコンパイルして、ブラウザーで直接実行するコードの結果を参照してください。'
+  title: 'C# の数値'
+  description: '数値型に関するこのチュートリアルでは、ブラウザーを使用して、対話形式で C# を学習します。 C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。'
   audience: Developer
   level: Beginner
   nextTutorialHref: branches-and-loops
@@ -13,11 +13,11 @@ metadata:
 items:
   - durationInMinutes: 1
     content: |
-      このチュートリアルで説明する c# での数値型は、対話的にお使いのブラウザーを使用して c# を記述しをコンパイルして、コードの実行の結果を参照してください。 一連数字と c# での算術演算を探索するレッスンにはが含まれています。 これらのレッスンでは、c# 言語の基本を学習します。
-  - title: 整数の数値演算を調査します。
+      このチュートリアルでは C# の数値型について対話形式で学習できます。ブラウザーを使用して C# を記述し、コードをコンパイルして実行した結果を確認します。 このチュートリアルには、C# の数値と算術演算に関する一連のレッスンが含まれています。 これらのレッスンでは、C# 言語の基本を説明します。
+  - title: 整数の演算の確認
     durationInMinutes: 4
     content: |
-      対話型のウィンドウで次のコードを実行します。 手順を実行する対話型ウィンドウで次のコード ブロックを入力し、をクリックして、**実行**ボタンをクリックします。
+      対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。
 
       ```csharp
       int a = 18;
@@ -26,49 +26,49 @@ items:
       Console.WriteLine(c);
       ```
 
-      整数と基本的な算術演算の 1 つだけ見てきました。 `int`型を表す、**整数**、正または負の整数。 使用する、`+`のシンボルを追加します。 整数の他の一般的な数値演算は次のとおりです。
+      整数を使用した基本的な算術演算の 1 つを確認しました。 `int` 型は、**整数**を表します (正の整数、または負の整数)。 加算には `+` 記号を使用します。 他の一般的な整数の算術演算には次のものがあります。
 
-      - `-`減算
-      - `*`乗算の
-      - `/`除算の
+      - `-`: 減算
+      - `*`: 乗算
+      - `/`: 除算
 
       > [!TIP]
-      > このチュートリアルでは、対話型のウィンドウで作成したコードを修正して、自分で調べることができます。 このチュートリアルでは、各ステップで試用できる例を示します。
+      > このチュートリアルでは、対話型ウィンドウで作成したコードを変更して、自分で確認できます。 このチュートリアルでは、各ステップで実際に試すことができる例を用意しています。
 
-      これらのさまざまな操作を表示することによって開始します。 これらの各操作を再試行してくださいに 3 行目を変更します。 各編集の後にクリックして、**実行**ボタンをクリックします。
+      まずは、上記の各種演算を実行してみます。 3 行目を変更して、各演算を試します。 編集が終わるごとに、**[実行]** をクリックします。
 
-      減算します。
+      減算：
 
       ```csharp
       int c = a - b;
       ```
 
-      乗算します。
+      乗算：
 
       ```csharp
       int c = a * b;
       ```
 
-      除算します。 
+      除算： 
 
       ```csharp
       int c = a / b;
       ```
 
-      希望の場合は、同一の行に複数の数学演算を実行することによってすることもできます。
+      好みで、同じ行で複数の算術演算を実行することもできます。
 
       > [!TIP]
-      > C# (または任意のプログラミング言語) を探索するよう、コードを記述するときに、間違いを行うします。 **コンパイラ**はそれらのエラーを見つけてに報告します。 出力には、エラー メッセージが含まれている、よく見る、コード例では、そして修正内容を表示する対話型ウィンドウ内のコード。
-      > その手順を使用すると、c# コードの構造を学習できます。     
+      > C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。
+      > こうした実習が C# コードの構造を理解するのに役立ちます。     
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 操作の順序を表示します。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 演算の順序の確認
     durationInMinutes: 7
     content: |
-      C# 言語では、数学で学習したルールのルールに一貫性のあるさまざまな数学操作の優先順位を定義します。
-      乗算と除算優先加算と減算します。
-      対話型ウィンドウで、次のコードを実行している従ってください。
+      C# 言語は、数学で学んだ規則と同じ規則で各演算の優先順位を定義します。
+      乗算と除算は、加算と減算よりも優先されます。
+      対話型ウィンドウで次のコードを実行して、実際に確認しましょう。
 
       ```csharp
       int a = 5;
@@ -78,9 +78,9 @@ items:
       Console.WriteLine(d);
       ```
 
-      出力は、追加する前に、乗算が実行されたことを示します。
+      出力を見ると、加算の前に乗算が実行されていることがわかります。
 
-      操作の別の順序を強制するには、操作を囲むかっこを追加することで、または対象の操作が最初に実行します。
+      演算の周りに丸かっこを追加する、または最初に実行したい演算を追加することで、演算の順序を変えることができます。
 
       ```csharp
       int a = 5;
@@ -90,15 +90,15 @@ items:
       Console.WriteLine(d);
       ```
 
-      さまざまな操作を組み合わせることによってよりについて説明します。 次のように上記の 4 行目に置き換えます。
+      さまざまな演算を多数組み合わせて、他にも試してみましょう。 上記の 4 行目を次のように置き換えます。
 
       ```csharp
       int d = (a + b) - 6 * c + (12 * 4) / 3 + 12;
       ```
 
-      お気付きの整数について注目に値する動作です。 常に整数の除算は、数学的な結果には、10 進数または分数部分にが含まれます場合でも、結果の整数値を生成します。
+      整数について面白い動作をしていることに気づいたでしょうか。 算術の結果に小数点や小数部分が含まれていても、整数の除算は常に整数の結果を算出します。
 
-      この動作を目にしていない場合は、次の操作を再試行してください。
+      この動作を確認できない場合は、次のコードを試してください。
 
       ```csharp
       int a = 7;
@@ -108,15 +108,15 @@ items:
       Console.WriteLine(d);
       ```
 
-      をクリックして**実行**結果を表示するには、もう一度です。
+      もう一度 **[実行]** をクリックして結果を確認します。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 整数の有効桁数および制限を探索します。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 整数の有効桁数と制限の確認
     durationInMinutes: 5
     content: |
-      最後のサンプルでは、整数の除算では、結果が切り捨てられますを示しました。
-      取得することができます、**剰余**を使用して、**剰余**、演算子、`%`文字。
+      この最後のサンプルでは、整数の除算における結果の切り捨てについて確認します。
+      **modulo** 演算子 (`%` 文字) を使用して、**剰余**を得ることができます。
 
       ```csharp
       int a = 7;
@@ -128,7 +128,7 @@ items:
       Console.WriteLine("remainder: " + e);
       ```
 
-      他の方法の 1 つの数学的な整数とは異なる整数型 (C#):`int`型が最小と最大値。 これらの制限を表示する対話型のウィンドウでこのコードを実行します。
+      C# の整数型は算術における整数ともう 1 つ異なる点があります。それは `int` 型には最小値と最大値の制限があるということです。 対話型ウィンドウでこのコードを実行し、これらの制限を確認しましょう。
 
       ```csharp
       int max = int.MaxValue;
@@ -136,25 +136,25 @@ items:
       Console.WriteLine("The range of integers is " + min + " to " + max);
       ```
 
-      ある場合は、計算では、これらの制限を超える値を生成、**アンダー フロー**または**オーバーフロー**条件。 別の 1 つの制限をラップする、応答が表示されます。 例を参照する対話型ウィンドウに 2 つの行を追加します。
+      計算によってこれらの制限を超える値が作られると、**アンダーフロー**または**オーバーフロー**の状態になります。 計算の結果が 1 つの制限からもう 1 つの制限に折り返されているように見えます。 対話型ウィンドウに次の 2 行を追加して、例を確認します。
 
       ```csharp
       int what = max + 3;
       Console.WriteLine("An example of overflow: " + what);
       ```
 
-      答えが (負) 最小の整数に近い非常にことに注意してください。 同じである`min + 2`です。 加算演算**がオーバーフローした**整数の許容値。
-      回答は非常に大きい負の数値をオーバーフロー「周りで折り返されます」可能な整数の最大値から最小にためです。
+      計算の結果が最小値の (負の) 整数に極めて近いことに注目してください。 これは `min + 2` と同じです。 加算演算が許容された整数値を**オーバーフロー**しました。
+      整数がオーバーフローして最大値から最小値に ”折り返され” たため、計算結果が非常に大きな負の値になっています。
 
-      さまざまな制限と有効桁数が使用するときにその他の数値型がある、`int`型は、お客様のニーズを満たしていません。 その次へ を見てみましょう。
+      他にもさまざまな制限や有効桁数を持つ数値型があり、`int` 型がご自分のニーズと合わない場合は、そちらも使用できます。 次はその別の数値型を見ていきます。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: Double 型を動作します。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: double 型の処理
     durationInMinutes: 5
     content: |
-      `double`数値型が倍精度浮動小数点数を表します。 これらの用語は、初めて使用する可能性があります。 A**浮動小数点**数が非常に大きいまたは大きさにすることは整数以外の数値を表すに便利です。 **倍精度**より大きい有効桁数を使用してこれらの数値を格納することを意味**単精度**です。 最近のコンピューターは単精度の数値よりも倍精度を使用する方が一般的です。
-      見てみましょう。 対話型のウィンドウで次のコードと結果を参照してください。
+      `double` 数値型は、倍精度浮動小数点数を表します。 こうした用語を初めて見た人もいるかもしれません。 **浮動小数点**数は、非常に大きな、または非常に小さな、整数でない数値を表すのに役立ちます。 **倍精度**は、そうした数値が**単精度**よりも大きな有効桁数を使用して格納されることを意味しています。 最近のコンピューターでは、単精度よりも倍精度の数値を使用する方が一般的です。
+      確認してみましょう。 対話型ウィンドウで次のコードを実行して結果を確認します。
 
       ```csharp
       double a = 5;
@@ -164,7 +164,7 @@ items:
       Console.WriteLine(d);
       ```
 
-      商の小数部分が、応答に含まれていることに注意してください。 1 個の double を少し複雑な式を試してください。
+      計算結果に商の小数部分が含まれていることに注目してください。 double 型を使用して、もう少し複雑な式を試します。
 
       ```csharp
       double a = 19;
@@ -174,7 +174,7 @@ items:
       Console.WriteLine(d);
       ```
 
-      Double 型の値の範囲は、整数値よりもかなり大きくします。 対話型のウィンドウで次のコードを試してください。
+      double 値は整数値よりも範囲が大きくなります。 対話型ウィンドウで次のコードを実行します。
 
       ```csharp
       double max = double.MaxValue;
@@ -182,28 +182,28 @@ items:
       Console.WriteLine("The range of double is " + min + " to " + max);
       ```
 
-      科学的表記法を表すには、これらの値が出力されます。 左側には、番号、`E`は、重要です。 右側の数は、10 の累乗で、指数部です。 内部的には、これらの番号は、同様が、バイナリ形式で表されます。 1 つの部分では、バイナリの桁数を表します。
-      別の部分では、その有効桁数の基準としたバイナリ ポイント (小数点の位置に似ています) を配置する場所を表します。
+      これらの値は指数表記で出力されます。 `E` の左側は有効数字です。 右側の数値は指数であり、10 の累乗です。 これらの数値は同じように表されていても、内部的にはバイナリ形式になっています。 一方は、有効バイナリ桁数を表しています。
+      もう一方は、この有効桁数に対してバイナリの小数点の位置を表しています。
 
-      数値演算の 10 進数と同じように丸め誤差個の double (C#) ことができます。 このコードを試してください。
+      算術における 10 進数と同じように、C# における double には丸め誤差が発生することがあります。 次のコードを試してみましょう。
 
       ```csharp
       double third = 1.0 / 3.0;
       Console.WriteLine(third);
       ```
 
-      わかって`0.3`繰り返しが正確に一致しないと同じ`1/3`です。
+      `0.3` の循環小数は `1/3` と完全に同じではありません。
 
-      ***チャレンジ***
+      ***課題***
 
-      数値が大きい、小さい数値、乗算と除算を使用した他の計算を再試行してください、`double`型です。  複雑な計算を再試行してください。
+      `double` 型を使用して、大きい値や小さい値、乗算、除算などの計算してみましょう。  もっと複雑な計算を試してみてください。
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 固定小数点型を操作します。
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 固定小数点型の処理
     durationInMinutes: 8
     content: |
-      C# では、基本的な数値型を見てきました。 整数と倍です。  については、その他の 1 つの型がある:`decimal`型です。 `decimal`型には、範囲が狭いより大きい有効桁数が`double`です。 用語**ポイントを固定**小数点 (またはバイナリのポイント) に移動しないことを意味します。 見てみましょう。
+      C# の基本的な数値型である整数と double について見てきました。  もう 1 つ知っておくべき型として、`decimal` 型があります。 `decimal` 型は、`double` 型よりも範囲が小さいものの有効桁数が大きい型です。 **固定小数点**という用語は、小数点 (またはバイナリの小数点) が動かないことを意味しています。 では、始めましょう。
 
       ```csharp
       decimal min = decimal.MinValue;
@@ -211,7 +211,7 @@ items:
       Console.WriteLine("The range of the decimal type is " + min + " to " + max);
       ```
 
-      範囲がよりも小さいことに注意してください、`double`型です。 次のコードを試行することで、decimal 型をさらに高い精度を確認できます。
+      `double` 型よりも範囲が小さいことに注目してください。 次のコードを実行すると、decimal 型では有効桁数がより大きいことを確認できます。
 
       ```csharp
       double a = 1.0;
@@ -223,20 +223,20 @@ items:
       Console.WriteLine(c / d);
       ```
 
-      `M`番号のサフィックスが定数を使用することを指定する方法では、`decimal`型です。
+      数値の末尾の `M` は、定数では `decimal` 型を使用する必要があることを示しています。
 
-      10 進数型を使用して数値演算の小数点の右側にある複数の数字であることを確認します。 
+      decimal 型を使用した演算では、小数点の右側の桁数がより多いことに注目してください。 
 
-      ***チャレンジ***
+      ***課題***
 
-      別の数値型を確認したらは、円の半径は 2.50 インチの面積を計算するコードを記述します。 覚えて PI を掛けた円の領域が乗 radius であります。 1 つのヒント: c# PI の定数が含まれる:`Math.PI`の値に対して使用することができます。 
+      さまざまな数値型を確認したので、次は半径が 2.50 インチの円の面積を計算するコードを記述してみます。 円の面積は、半径の 2 乗 x 円周率です。 ヒント: C# には `Math.PI` という円周率の定数があり、その値を使用できます。 
 
       > [!NOTE]
-      > このオンライン コーディング エクスペリエンスはプレビュー モードです。 問題が発生した場合に報告してくださいに[dotnet/試用リポジトリで](https://github.com/dotnet/try/issues)です。
-  - title: 完全なチャレンジ
+      > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+  - title: 課題完了
     durationInMinutes: 1
     content: |
-      「番号で c#」チュートリアルをを完了しました。 します C# では、次のトピックでの番号の詳細を学習できます。
+      これで "C# の数値" に関するチュートリアルは終了です。 C# の数値の詳細については、次のトピックで学習できます。
 
       [整数型の一覧表](../language-reference/keywords/integral-types-table.md)   
       [浮動小数点型の一覧表](../language-reference/keywords/floating-point-types-table.md)   
